[tool.poetry]
name = "portfolio-project"
version = "0.1.0"
description = ""
authors = ["Vasileios Zografos <vasileios@zografos.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.50"
pandas = "^2.2.3"
scipy = "^1.14.1"
forex-python = "^1.8"
pyportfolioopt = "^1.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
